enums for action states and more event logs, more details about billing
